--- a/src/Styles/biyipage.css
+++ b/src/Styles/biyipage.css
@@ -6,7 +6,9 @@ div.meet-biyi{
     align-items: center;
     color: var(--primary-color-2);
     margin: 0 9.375rem;
+    padding-block-start: 12.5rem;
 }
+
 @media screen and (max-width: 1024px) {
     div.meet-biyi{
         margin: 0 4.6875rem;
@@ -20,6 +22,7 @@ div.meet-biyi{
         align-items: center;
         color: var(--primary-color-2);
         margin: 0 3.125rem;
+        padding-block-start: 11.75rem;
     }
 }
 @media screen and (max-width:425px) {
@@ -108,12 +111,6 @@ div.meet-biyi-02 > p{
         font-weight: 400;
     }
 }
-@media screen and (max-width:375px){
-    div.meet-biyi-02 > p{
-        /* width:90%; */
-        /* font-size: 0.5rem; */
-    }
-}
 div.services-container{
     display: flex;
     flex-direction: row;
@@ -130,6 +127,50 @@ div.services-container > div{
     gap: 0.5rem;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+div.hover-div{
+    position:absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    visibility: hidden
+}
+div.hover-div > p{
+    color: var(--primary-color-2);
+    font-size: var(--font-24);
+    margin-block-end: 2.25rem;
+    font-weight: 600;
+}
+div.hover-div > div{
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    border: 1px solid var(--primary-color-2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #FFF;
+    font-size: var(--font-14);
+    font-style: normal;
+    font-weight: 600;
+}
+div.services-container > div:hover div.hover-div{
+    animation: moveUp2 0.5s ease  1 forwards;
+    background-color: var(--primary-color-1);
+    color: var(--primary-color-2);
+    height: 0;
+    visibility: visible;
+}
+@keyframes moveUp2{
+    to{
+        height: 100%;
+    }
 }
 div.services-container > div > p{
     font-size: var(--font-24);
@@ -140,6 +181,7 @@ div.services-container > div > p{
         flex-direction: column;
         gap: 1rem;
         color: var(--primary-color-1);
+        margin-block-start: 6rem;
     }
     div.services-container > div{
         background: var(--primary-color-2);
