--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -99,6 +99,28 @@ div.mobile-footer-container > div > p > span{
         color: #FFF;
         font-size: var(--font-14);
         font-weight: 400;
+        position: relative;
+    }
+    div.footer-div-2 > ul > li::after{
+        position:absolute;
+        bottom: 0.5rem;
+        left: 0.5rem;
+        content: "";
+        width: 0;
+        height: .125rem;
+        background-color: var(--primary-color-2);
+        transition: all ease 0.5s;
+    }
+    div.footer-div-2 > ul > li:hover{
+        animation: moveUp 0.1s ease  1;
+    }
+    @keyframes moveUp {
+        to{
+            transform: translateY(-2%);
+        }
+    }
+    div.footer-div-2 > ul > li:hover::after{
+        width: calc(100% - 1rem);
     }
     div.footer-div-3{
         display: flex;
@@ -165,6 +187,28 @@ div.mobile-footer-container > div > p > span{
         color: #FFF;
         font-size: var(--font-16);
         font-weight: 400;
+        position: relative;
+    }
+    div.footer-div-2 > ul > li::after{
+        position:absolute;
+        bottom: 0.5rem;
+        left: 0.5rem;
+        content: "";
+        width: 0;
+        height: .125rem;
+        background-color: var(--primary-color-2);
+        transition: all ease 0.5s;
+    }
+    div.footer-div-2 > ul > li:hover{
+        animation: moveUp 0.1s ease  1;
+    }
+    @keyframes moveUp {
+        to{
+            transform: translateY(-2%);
+        }
+    }
+    div.footer-div-2 > ul > li:hover::after{
+        width: calc(100% - 1rem);
     }
     div.footer-div-3{
         display: flex;
