--- a/src/Styles/letstalk1.css
+++ b/src/Styles/letstalk1.css
@@ -1,15 +1,53 @@
 div.lettalk1 >input{
     display: block;
     max-width: 463px;
-    width: 70%;
+    width: 80%;
     padding-block: 1rem;
     padding-inline-start: 1rem;
     background: transparent;
     border-radius: 6px;
     border: 1px solid #FFF;
     margin: 0 auto;
-    margin-top: 6.25rem;
+    color: #9B9B9B;
+    /* margin-top: 6.25rem; */
     margin-bottom: 1.3125rem;
+}
+div.typewriter{
+    margin: 0 auto;
+    margin-block: 0.5rem;
+    /* text-align: center; */
+    padding: 3rem 1.5rem;
+    /* justify-content: center; */
+    max-width: 463px;
+    width: 80%;
+    background: rgba(24, 24, 24, 0.25);
+    border-radius: .3125rem;
+}
+div.typewriter > p{
+    font-size: 1.5rem;
+    color: #FFD700;
+    overflow: hidden;
+    white-space: nowrap;
+    animation: typewriter 1s steps(30) 1;
+}
+@keyframes typewriter {
+    from {
+        width: 0; /* Start with no text */
+    }
+    to {
+        width: 100%; /* Reveal the entire text */
+    }
+}
+@media screen and (max-width:425px) {
+    div.typewriter{
+        margin: 0 auto;
+        margin-block: 0.5rem;
+        /* text-align: center; */
+        padding: 3rem 0.75rem;
+    }
+    div.typewriter > p{
+        font-size: 1.0rem;
+    }   
 }
 div.lettalk1 >input::placeholder{
     color: #9B9B9B;
