--- a/src/Styles/letstalk2.css
+++ b/src/Styles/letstalk2.css
@@ -1,19 +1,62 @@
 div.lettalk2{
-    margin-top: 9.375rem;
+    /* margin-top: 9.375rem; */
 }
-div.lettalk2 > select{
+div.typewriter2{
+    margin: 0 auto;
+    margin-block: 0.5rem;
+    padding: 3rem 3rem;
+    max-width: 463px;
+    width: 80%;
+    background: rgba(24, 24, 24, 0.25);
+    border-radius: .3125rem;
+}
+div.typewriter2 > p{
+    font-size: 1.5rem;
+    color: #FFD700;
+    overflow: hidden;
+    white-space: nowrap;
+    animation: typewriter2 1s steps(30) 1;
+}
+@media screen and (max-width:425px) {
+    div.typewriter2{
+        margin: 0 auto;
+        margin-block: 0.5rem;
+        padding: 3rem 2rem;
+        max-width: 463px;
+        width: 80%;
+        background: rgba(24, 24, 24, 0.25);
+        border-radius: .3125rem;
+    }
+    div.typewriter2 > p{
+        font-size: 1.0rem;
+    }
+}
+@keyframes typewriter2 {
+    from {
+        width: 0; /* Start with no text */
+    }
+    to {
+        width: 100%; /* Reveal the entire text */
+    }
+}
+div.lettalk2 > div.select-service{
+    position: relative;
     display: block;
     margin: 0 auto;
     padding: 1rem 0px 1rem 1rem;
     border-radius: .375rem;
     border: .0625rem solid #FFF;
     max-width: 25rem;
-    width: 70%;
+    width: 80%;
     background-color: transparent;
     color:#9B9B9B;
     margin-bottom: 3.5625rem;
+    cursor: pointer;
 }
-div.lettalk2 > select > option{
-    font-size: 1rem;
-    font-weight: 400;
+div.select-service > svg{
+    position: absolute;
+    right: 3%;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
 }
