--- a/src/Styles/comp2.css
+++ b/src/Styles/comp2.css
@@ -58,7 +58,7 @@ div.lets-go-together{
     position: absolute;
     bottom:20%;
     right: 10%;
-    transform: translateX(50%);
+    transform: translateX(-50%) translateY(-50%);
     color: #060606;
     text-align: center;
     font-size: var(--font-16);
