--- a/src/Styles/homepage.css
+++ b/src/Styles/homepage.css
@@ -10,7 +10,7 @@ div.homepage > p.name {
     text-align: center;
   }
   div.gif-container{
-    width: 100% - 130px;
+    width: 100%;
     position: relative;
     padding-block-end: 10rem;
 }
@@ -37,6 +37,24 @@ img.backdrop2{
     right:0;
     top:0;
 }
+div.gif-container > div.meet-biyi{
+    position: absolute;
+    left:95%;
+    top: 70%;
+    transform: translateX(-50%) translateY(-50%);
+    width: 7.0625rem;
+    height: 7.0625rem;
+    color: #FFF;
+    text-align: center;
+    font-size:var(--font-20);
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    z-index: 4;
+}
 div.mission{
     background: var(--secondary-color);
     display: flex;
@@ -47,6 +65,11 @@ div.mission{
     padding-inline-start: 0;
     padding-inline-end: 0;
     padding-block-end: 3.75rem;
+    /* position: sticky; */
+    /* position:-webkit-sticky; */
+    top:0;
+    left:0;
+    z-index: 0;
 }
 div.mission > div{
     flex: 1
@@ -97,6 +120,7 @@ div.experience{
     padding-inline: 2rem;
     padding-block-start: 3rem;
     margin-block-end: 0rem;
+    position: relative;
 }
 div.exp-container{
     display: flex;
@@ -105,7 +129,7 @@ div.exp-container{
     /* gap: 3.4375rem; */
     justify-content: space-between;
     color: var(--primary-color-2);
-    margin-bottom: 3.375rem;
+    /* margin-bottom: 3.375rem; */
 }
 div.exp-container > div:not(:nth-of-type(2),:nth-of-type(4)){
     padding: .25rem;
@@ -138,7 +162,11 @@ div.view-portfolio{
     align-items: center;
     text-align: center;
     border: .125rem solid var(--primary-color-2);
-    margin: 0 auto;
+    /* margin: 0 auto; */
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    transform: translateX(-50%) translateY(-50%);
 }
 
 
@@ -154,8 +182,9 @@ div.view-portfolio{
     }
     
     div.gif-container{
-        width: calc(100% - 130px);
-        margin: 0 auto;
+        width: 100%;
+        /* margin: 0 auto; */
+        padding-inline: 8.125rem;
         position: relative;
         padding-block-end: 6.25rem;
     }
@@ -166,12 +195,22 @@ div.view-portfolio{
         position: absolute;
     }
     img.backdrop1{
-        left:0;
+        left:3.8125rem;
         top:0;
+        transform: translateX(-100%) rotate(360deg);
+        transition: all ease 0.5s;
+    }
+    img.backdrop1.appear{
+        transform: translateX(0) rotate(0deg);
     }
     img.backdrop2{
-        right:0;
+        right:3.8125rem;
         top:0;
+        transform: translateX(100%) rotate(360deg);
+        transition: all ease 0.5s 0.5s;
+    }
+    img.backdrop2.appear{
+        transform: translateX(0) rotate(0deg);
     }
     div.gif-container > img.gif{
         position: relative;
@@ -246,7 +285,7 @@ div.view-portfolio{
         /* gap: 3.4375rem; */
         justify-content: space-between;
         color: var(--primary-color-2);
-        margin-bottom: 3.75rem;
+        /* margin-bottom: 3.75rem; */
     }
     div.exp-container > div:not(:nth-of-type(2),:nth-of-type(4)){
         padding: .625rem;
@@ -292,8 +331,9 @@ div.homepage > p.name{
 }
 
 div.gif-container{
-    width: calc(100% - 130px);
-    margin: 0 auto;
+    width: 100%;
+    /* margin: 0 auto; */
+    padding-inline: 8.125rem;
     position: relative;
     padding-block-end: 6.25rem;
 }
@@ -303,11 +343,11 @@ div.gif-container > img.img{
     position: absolute;
 }
 img.backdrop1{
-    left:0;
+    left:3.8125rem;
     top:0;
 }
 img.backdrop2{
-    right:0;
+    right:3.8125rem;
     top:0;
 }
 div.gif-container > img.gif{
@@ -379,7 +419,7 @@ div.exp-container{
     /* gap: 3.4375rem; */
     justify-content: space-between;
     color: var(--primary-color-2);
-    margin-bottom: 5.625rem;
+    /* margin-bottom: 5.625rem; */
 }
 div.exp-container > div:not(:nth-of-type(2),:nth-of-type(4)){
     padding: .625rem;
